--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -22,3 +22,7 @@ h1, h2, h3 {
   background-image: url(../../resources/images/the-flatiron-building.png);
   color: white;
 }
+
+.colorful h2 {
+  font-size: 23px;
+}
