--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -31,3 +31,9 @@ h1, h2, h3 {
   font-size: 18px;
   color: white;
 }
+
+.footer {
+  background-color: dimgray;
+  font-size: 11px;
+  color: white;
+}
